Update CORS configuration in WebConfig